r2e-compile-tests/compile-fail/module_import_forgot_register.stderr
error[E0277]: type `UserSvc` was not provided to the AppBuilder
  --> compile-fail/module_import_forgot_register.rs:50:14
   |
50 |             .build_state()
   |              ^^^^^^^^^^^ missing `.provide::<UserSvc>()` or `.register::<UserSvc>()`
   |
   = help: the trait `Contains<UserSvc, _>` is not implemented for `TNil`
   = note: every dependency must be provided or registered as a bean before calling `build_state()`
help: the following other types implement trait `Contains<H, Idx>`
  --> $WORKSPACE/r2e-core/src/type_list.rs
   |
   | impl<H, T> Contains<H, Here> for TCons<H, T> {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `TCons<H, T>` implements `Contains<H, Here>`
...
   | impl<H, X, T, I> Contains<H, There<I>> for TCons<X, T> where T: Contains<H, I> {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `TCons<X, T>` implements `Contains<H, There<I>>`
...
   | impl<H, T> Contains<H, Here> for HCons<H, T> {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `HCons<H, T>` implements `Contains<H, Here>`
   | impl<H, X, T, I> Contains<H, There<I>> for HCons<X, T> where T: Contains<H, I> {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `HCons<X, T>` implements `Contains<H, There<I>>`
   = note: required for `TCons<Pool, TNil>` to implement `Contains<UserSvc, There<_>>`
   = note: 1 redundant requirement hidden
   = note: required for `TCons<OrderSvc, TCons<Pool, TNil>>` to implement `Contains<UserSvc, There<There<_>>>`
   = note: required for `TCons<UserSvc, TNil>` to implement `AllSatisfied<TCons<OrderSvc, TCons<Pool, TNil>>, (There<There<_>>, ())>`
note: required by a bound in `builder::nostate::<impl AppBuilder<NoState, P, R, Mods>>::build_state`
  --> $WORKSPACE/r2e-core/src/builder/nostate.rs
   |
   |     pub async fn build_state<W, MW>(self) -> AppBuilder<<P as BuildHList>::Output>
   |                  ----------- required by a bound in this associated function
...
   |         R: AllSatisfied<P, W>,
   |            ^^^^^^^^^^^^^^^^^^ required by this bound in `builder::nostate::<impl AppBuilder<NoState, P, R, Mods>>::build_state`

error[E0277]: type `UserSvc` was not provided to the AppBuilder
  --> compile-fail/module_import_forgot_register.rs:46:9
   |
46 | /         r2e::AppBuilder::new()
47 | |             .provide(Pool)
48 | |             // UserModule is imported by OrderModule but never registered.
49 | |             .register_module::<OrderModule>()
50 | |             .build_state()
   | |__________________________^ missing `.provide::<UserSvc>()` or `.register::<UserSvc>()`
   |
   = help: the trait `Contains<UserSvc, _>` is not implemented for `TNil`
   = note: every dependency must be provided or registered as a bean before calling `build_state()`
help: the following other types implement trait `Contains<H, Idx>`
  --> $WORKSPACE/r2e-core/src/type_list.rs
   |
   | impl<H, T> Contains<H, Here> for TCons<H, T> {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `TCons<H, T>` implements `Contains<H, Here>`
...
   | impl<H, X, T, I> Contains<H, There<I>> for TCons<X, T> where T: Contains<H, I> {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `TCons<X, T>` implements `Contains<H, There<I>>`
...
   | impl<H, T> Contains<H, Here> for HCons<H, T> {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `HCons<H, T>` implements `Contains<H, Here>`
   | impl<H, X, T, I> Contains<H, There<I>> for HCons<X, T> where T: Contains<H, I> {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `HCons<X, T>` implements `Contains<H, There<I>>`
   = note: required for `TCons<Pool, TNil>` to implement `Contains<UserSvc, There<_>>`
   = note: 1 redundant requirement hidden
   = note: required for `TCons<OrderSvc, TCons<Pool, TNil>>` to implement `Contains<UserSvc, There<There<_>>>`
   = note: required for `TCons<UserSvc, TNil>` to implement `AllSatisfied<TCons<OrderSvc, TCons<Pool, TNil>>, (There<There<_>>, ())>`
note: required by a bound in `builder::nostate::<impl AppBuilder<NoState, P, R, Mods>>::build_state`
  --> $WORKSPACE/r2e-core/src/builder/nostate.rs
   |
   |     pub async fn build_state<W, MW>(self) -> AppBuilder<<P as BuildHList>::Output>
   |                  ----------- required by a bound in this associated function
...
   |         R: AllSatisfied<P, W>,
   |            ^^^^^^^^^^^^^^^^^^ required by this bound in `builder::nostate::<impl AppBuilder<NoState, P, R, Mods>>::build_state`

error[E0277]: type `UserSvc` was not provided to the AppBuilder
  --> compile-fail/module_import_forgot_register.rs:51:14
   |
51 |             .await
   |              ^^^^^ missing `.provide::<UserSvc>()` or `.register::<UserSvc>()`
   |
   = help: the trait `Contains<UserSvc, _>` is not implemented for `TNil`
   = note: every dependency must be provided or registered as a bean before calling `build_state()`
help: the following other types implement trait `Contains<H, Idx>`
  --> $WORKSPACE/r2e-core/src/type_list.rs
   |
   | impl<H, T> Contains<H, Here> for TCons<H, T> {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `TCons<H, T>` implements `Contains<H, Here>`
...
   | impl<H, X, T, I> Contains<H, There<I>> for TCons<X, T> where T: Contains<H, I> {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `TCons<X, T>` implements `Contains<H, There<I>>`
...
   | impl<H, T> Contains<H, Here> for HCons<H, T> {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `HCons<H, T>` implements `Contains<H, Here>`
   | impl<H, X, T, I> Contains<H, There<I>> for HCons<X, T> where T: Contains<H, I> {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `HCons<X, T>` implements `Contains<H, There<I>>`
   = note: required for `TCons<Pool, TNil>` to implement `Contains<UserSvc, There<_>>`
   = note: 1 redundant requirement hidden
   = note: required for `TCons<OrderSvc, TCons<Pool, TNil>>` to implement `Contains<UserSvc, There<There<_>>>`
   = note: required for `TCons<UserSvc, TNil>` to implement `AllSatisfied<TCons<OrderSvc, TCons<Pool, TNil>>, (There<There<_>>, ())>`
note: required by a bound in `builder::nostate::<impl AppBuilder<NoState, P, R, Mods>>::build_state`
  --> $WORKSPACE/r2e-core/src/builder/nostate.rs
   |
   |     pub async fn build_state<W, MW>(self) -> AppBuilder<<P as BuildHList>::Output>
   |                  ----------- required by a bound in this associated function
...
   |         R: AllSatisfied<P, W>,
   |            ^^^^^^^^^^^^^^^^^^ required by this bound in `builder::nostate::<impl AppBuilder<NoState, P, R, Mods>>::build_state`
